edit image and box container

--- a/index(test).html
+++ b/index(test).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>제 2회 강원도 사이버 보안 해킹방어대회</title>
 </head>
 <body>
@@ -23,9 +23,6 @@
                 <span>Gangwon-do Cyber Security Hacking Defense Contest</span>
                 <a href="#">참가신청</a>
             </div>
-            <div class="banner_img">
-                <img src="img/defense.png" alt="">
-            </div>
         </div>
     </article>
     <section class="contest__info">
@@ -38,12 +35,6 @@
                         대학 소재 대학생,<br>
                         대학원생, 군인, 군무원</p>
                 </div>
-                <div class="app info_box">
-                    <h3>참가신청</h3>
-                    <hr>
-                    <p>2022년 10월 26일(수요일) ~ <br>11월 5일(토요일)</p>
-                    <a href="#" alt="참가신청 버튼">신청하기</a>
-                </div>
                 <div class="schdule info_box">
                     <h3>대회일정</h3>
                     <hr>
@@ -51,6 +42,8 @@
                     <p>2022년 11월 6일(일요일)</p>
                     <span>본선</span>
                     <p>2022년 11월 26일(일요일)</p>
+                    <span>참가신청기간</span>
+                    <p>2022년 00월 00일 ~ 00월 00일</p>
                 </div>
                 <div class="place info_box">
                     <h3>대회장소</h3>
@@ -58,20 +51,20 @@
                     <p>강원도 춘천시 스포츠타운길 376<br>
                         오라호텔베어스 소양홀</p>
                 </div>
+                <div class="prize info_box">
+                    <h3>시상내역</h3>
+                    <hr>
+                    <p class="prize__1">강원도지사 상</p>
+                    <p class="prize__2">한국인터넷진흥원장 상</p>
+                    <p class="prize__3">강원테크노파크원장 상</p>
+                </div>
             </div>
             <div class="info__bottom">
-                <div class="prize_general info_box">
-                    <h3>시상내역</h3>
+                <div class="app info_box">
+                    <h3>참가신청</h3>
                     <hr>
-                        <p class="prize__1">강원도지사 상</p>
-                        <p class="prize__2">한국인터넷진흥원장 상</p>
-                        <p class="prize__3">강원테크노파크원장 상</p>
-                </div>
-                <div class="prize_army info_box">
-                    <h3>시상내역</h3>
-                    <hr>
-                        <p class="prize__4">지상작전사령관 상</p>
-                        <p class="prize__5">지상작전사령관 상</p>
+                    <p>2022년 00월 00일 ~ 00월 00일</p>
+                    <span>www. gchd.or.kr</span>
                 </div>
                 <div class="qus info_box">
                     <h3>대회문의</h3>
