--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
                         <p class="prize__4">지상작전사령관 상</p>
                         <p class="prize__5">지상작전사령관 상</p>
                 </div>
+                <div class="pre info_box">
+                    <h3>사전설명</h3>
+                    <hr>
+                    <p>2022년 11월 3일(목요일) 14:00<br>
+                        온라인설명회<br>
+                        (대회 진행, 출제분야, 운영방안)<br>
+                        <a href="#" alt="ZOOM 접속 링크">ZOOM 접속</a>
+                    </p>
+                </div>
                 <div class="qus info_box">
                     <h3>대회문의</h3>
                     <hr>
